force-app/main/default/objects/Relation_Activity__c/Relation_Activity__c.object-meta.xml
<CustomObject>
    <label>活動詳細（販売用）</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>活動詳細</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>