force-app/main/default/objects/Relation_Activity__c/fields/Auctiondata__c.field-meta.xml
<CustomField>
    <fullName>Auctiondata__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>オークション出品データ</label>
    <referenceTo>Auction_Data__c</referenceTo>
    <relationshipName>WggA</relationshipName>
    <type>Lookup</type>
</CustomField>