force-app/main/default/objects/Relation_Activity__c/fields/call_user__c.field-meta.xml
<CustomField>
    <fullName>call_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>対応者（参照項目）</label>
    <referenceTo>User</referenceTo>
    <relationshipName>call_user</relationshipName>
    <type>Lookup</type>
</CustomField>