force-app/main/default/objects/Relation_Activity__c/fields/call_user_Flow__c.field-meta.xml
<CustomField>
    <fullName>call_user_Flow__c</fullName>
    <label>対応者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>