force-app/main/default/objects/Relation_Activity__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連するケース</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Case2Xjj</relationshipName>
    <type>Lookup</type>
</CustomField>