force-app/main/default/objects/Relation_Activity__c/fields/Case_Task__c.field-meta.xml
<CustomField>
    <fullName>Case_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連する対応タスク（販売）</label>
    <referenceTo>Case_Task__c</referenceTo>
    <relationshipName>Case_Task73yr</relationshipName>
    <type>Lookup</type>
</CustomField>