force-app/main/default/objects/Relation_Activity__c/fields/Comment_Event__c.field-meta.xml
<CustomField>
    <fullName>Comment_Event__c</fullName>
    <label>メモ・ネクストアクション（テキストえりあ）</label>
    <type>TextArea</type>
</CustomField>