force-app/main/default/objects/Relation_Activity__c/fields/Contact_Action__c.field-meta.xml
<CustomField>
    <fullName>Contact_Action__c</fullName>
    <label>コンタクト区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>