force-app/main/default/objects/Relation_Activity__c/fields/Contact_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Contact_Purpose__c</fullName>
    <label>コンタクト内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>