force-app/main/default/objects/Relation_Activity__c/fields/Create_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Create_Datetime__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>日時</label>
    <type>DateTime</type>
</CustomField>