force-app/main/default/objects/Relation_Activity__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連するリード</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>活動詳細（販売用）</relationshipLabel>
    <relationshipName>Lead_relation_in_activity_detail</relationshipName>
    <type>Lookup</type>
</CustomField>