force-app/main/default/objects/Relation_Activity__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>販売会員情報(参照項目)</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipName>Member_1</relationshipName>
    <type>Lookup</type>
</CustomField>