force-app/main/default/objects/Relation_Activity__c/fields/Member_Flow__c.field-meta.xml
<CustomField>
    <fullName>Member_Flow__c</fullName>
    <label>販売会員情報</label>
    <length>255</length>
    <type>Text</type>
</CustomField>