force-app/main/default/objects/Relation_Activity__c/fields/MemberId__c.field-meta.xml
<CustomField>
    <fullName>MemberId__c</fullName>
    <formula>Member__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>販売会員情報ID</label>
    <type>Text</type>
</CustomField>