force-app/main/default/objects/Relation_Activity__c/fields/Memo_action__c.field-meta.xml
<CustomField>
    <fullName>Memo_action__c</fullName>
    <label>メモ・ネクストアクション</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>