force-app/main/default/objects/Relation_Activity__c/fields/Model2__c.field-meta.xml
<CustomField>
    <fullName>Model2__c</fullName>
    <formula>Auctiondata__r.Model_text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車種（テキスト）</label>
    <type>Text</type>
</CustomField>