force-app/main/default/objects/Relation_Activity__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>車種</label>
    <referenceTo>Mst_Models__c</referenceTo>
    <relationshipName>Model</relationshipName>
    <type>Lookup</type>
</CustomField>