force-app/main/default/objects/Relation_Activity__c/fields/Relation_activity__c.field-meta.xml
<CustomField>
    <fullName>Relation_activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>販売用活動</label>
    <referenceTo>Custom_activity__c</referenceTo>
    <relationshipName>Relation_activity</relationshipName>
    <type>Lookup</type>
</CustomField>