force-app/main/default/objects/Relation_Activity__c/fields/relation_ss_offer_info__c.field-meta.xml
<CustomField>
    <fullName>relation_ss_offer_info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連するワンプライス車両</label>
    <referenceTo>ss_offer_info__c</referenceTo>
    <relationshipLabel>活動詳細（販売用）</relationshipLabel>
    <relationshipName>relation_ss_offer_info</relationshipName>
    <type>Lookup</type>
</CustomField>