force-app/main/default/objects/Relation_Activity__c/fields/Stock_number_Flow__c.field-meta.xml
<CustomField>
    <fullName>Stock_number_Flow__c</fullName>
    <label>管理番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>