force-app/main/default/objects/Relation_Activity__c/listViews/New_Relation_Activity.listView-meta.xml
<ListView>
    <fullName>New_Relation_Activity</fullName>
    <filterScope>Queue</filterScope>
    <label>[00]初期受付</label>
    <queue>New</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>